Se hicieron refactor de las clases: Prenda 									PrendaController 									PrendaService 									PrendaServiceImpl 									TipoPrenda
Y los siguientes HTML: edit_prendas
					   list_prendas
					   new_prendas

--- a/src/main/resources/templates/prendas/edit_prendas.html
+++ b/src/main/resources/templates/prendas/edit_prendas.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:th="http://www.thymeleaf.org">
@@ -35,7 +34,16 @@
                 </tr>
                 <tr>
                     <td>Tipo:</td>
-                    <td><input type="text" th:field="*{tipo}" /></td>
+                    <td th:object="${tipoPrendas}">
+                        <select id="tipo" name="tipo">
+                              <option value="">Elija un tipo</option>
+                            <option th:each="tipoPrenda : ${tipoPrendas}"
+                                    th:value="${tipoPrenda}"
+                                    th:text="${tipoPrenda.descripcion}"
+                                    th:selected="${tipoPrenda==tipoPrendaActual}">
+                            </option>
+                        </select>
+                    </td>
                 </tr>
                 <tr>
                     <td>Precio Base:</td>
@@ -49,3 +57,4 @@
     </div>
 </body>
 </html>
+
