--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <div align="center">
-        <h1>Menú Principal</h1>
+        <h1>Tienda Ropita</h1>
+        <h2>Menú Principal</h2>
     </div>
     <br />
     <div align="left">
         <ul>
             <li><a href="/tienda/prendas/list">Listado de prendas</a></li>
+            <li><a href="/tienda/clientes/list">Listado de clientes</a></li>
+            <li><a href="/tienda/ventas/list">Listado de ventas</a></li>
         </ul>
         <br />
     </div>
